# Openia

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  IA.md  README.md  pyproject.toml  start_app.py
Padr├úo de qualidade - Felixo System Design/: .gitmodules  AGENTS.md  CONTRIBUTING.md  README.md
Padr├úo de qualidade - Felixo System Design/core/: DESIGN_SYSTEM_BACKEND.md  DESIGN_SYSTEM_README.md  GUIA-START-APP-SCRIPT.md  GUIA_MINIMO_QUALIDADE.md  PROMPT_BASE_BACKEND.md  PROMPT_BASE_FRONTEND.md  TEMPLATE-CONTEXTO-IA.md
Padr├úo de qualidade - Felixo System Design/docs/: CORE-PADROES-OBRIGATORIOS.md  GIT-POLITICA-DE-VERSIONAMENTO.md  GUIAS-OPCIONAIS.md  INSTALACAO-EM-OUTROS-PROJETOS.md
Padr├úo de qualidade - Felixo System Design/guias/backend/: GUIA-BACKEND-CPF.md  GUIA-CRIPTOGRAFIA-CIFRA-DE-CESAR.md
Padr├úo de qualidade - Felixo System Design/guias/frontend/: GUIA-BACKGROUND-VISUAL.md  GUIA-ONBOARDING-E-AJUDA.md
Padr├úo de qualidade - Felixo System Design/guias/integracao/: GUIA-DEPLOY-RAILWAY.md  (+1 more)
openia/: __init__.py  __main__.py  cli.py  config.py  models.py  runner.py  usage.py
openia/interfaces/: base.py  registry.py
orctl/: __init__.py  __main__.py  cli.py  config.py  models.py  runner.py  ui.py  usage.py
orctl/interfaces/: base.py  registry.py
scripts/: README.md
scripts/bash-zsh/: install-openia-bash-zsh.sh
scripts/cmd/: install-openia-cmd.cmd  openia-command.cmd
scripts/powershell/: install-openia-powershell.ps1
tests/: test_cli.py  test_config.py  test_models.py  test_registry.py  test_runner.py  test_usage.py
(+3 files in other folders)
