[project]
name = "openia"
version = "0.1.0"
description = "Launcher de CLIs de IA de terminal compatíveis com OpenRouter."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[project.scripts]
openia = "openia.cli:entrypoint"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["openia", "openia.interfaces"]

[tool.pytest.ini_options]
testpaths = ["tests"]
